projects/vb6parse/snapshots/syntax/statements/filesystem/ch_dir/chdir_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/filesystem/ch_dir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ChDirStatement
      children:
        - kind: ChDirKeyword
          text: ChDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
    - kind: Newline
      text: "\n"
