projects/vb6parse/snapshots/syntax/statements/filesystem/ch_dir/chdir_with_parentheses_without_space.snap
---
source: projects/vb6parse/src/syntax/statements/filesystem/ch_dir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ChDirStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ChDirKeyword
                  text: ChDir
                - kind: ParenthesizedExpression
                  children:
                    - kind: LeftParenthesis
                      text: (
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: basePath
                    - kind: RightParenthesis
                      text: )
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
